//
//  UITestConstants.swift
//  SnapKit and GraphQL Practice
//
//  Created by Mert Tecimen on 27.06.2022.
//

import Foundation

enum AccessibilityIdentifiers: String{
    // buttons
    case filterButton = "filterButton"
    // Tables
    case filterTable = "filterTable"
    case mainTable = "mainTable"
}
